--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,6 @@
-BACKEND_URL= http://127.0.0.1:8000
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bGlnaHQta29pLTguY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_pxjUmziQ9mBI4cWz55C34QzgcYC74xpASdkrvzzcYK
+
+# PASSWORD=WCPRDdEAQTAPDSYc
+
+MONGODB_URI=mongodb+srv://varunkrishnankv2002:WCPRDdEAQTAPDSYc@cluster0.smcz9.mongodb.net/clarity
