--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@clerk/nextjs": "^6.0.0",
     "@notionhq/client": "^2.2.15",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@tabler/icons-react": "^3.21.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
