--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
     "react-dropzone": "^14.2.10",
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "eslint": "^8",
