--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,9 +25,10 @@
     "@tsparticles/slim": "^3.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^11.11.11",
     "lucide": "^0.453.0",
     "lucide-react": "^0.453.0",
+    "mini-svg-data-uri": "^1.4.4",
     "mongoose": "^8.7.1",
     "next": "14.2.15",
     "react": "^18",
