--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.701.0",
     "@clerk/nextjs": "^6.0.0",
     "@notionhq/client": "^2.2.15",
     "@paypal/react-paypal-js": "^8.7.0",
